# SAP-to-ICS

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
src/: discord_notifier.rs  encoding_fix.rs  ics_generator.rs  main.rs  models.rs  sap_client.rs  state.rs
